tests/baselines/reference/functionOverloads45.errors.txt
tests/cases/compiler/functionOverloads45.ts(5,10): error TS2394: Overload signature is not compatible with function implementation.
tests/cases/compiler/functionOverloads45.ts(11,10): error TS2394: Overload signature is not compatible with function implementation.


==== tests/cases/compiler/functionOverloads45.ts (2 errors) ====
    interface Animal { animal }
    interface Dog extends Animal { dog }
    interface Cat extends Animal { cat }
    
    function foo1(bar: { a:number }[]): Cat;
             ~~~~
!!! error TS2394: Overload signature is not compatible with function implementation.
    function foo1(bar: { a:string }[]): Dog;
    function foo1([x]: { a:number | string }[]): Animal {
        return undefined;
    }
    
    function foo2(bar: { a:number }[]): Cat;
             ~~~~
!!! error TS2394: Overload signature is not compatible with function implementation.
    function foo2(bar: { a:string }[]): Dog;
    function foo2([x]: { a:number | string }[]): Cat | Dog {
        return undefined;
    }
    
    
    var x1 = foo1([{a: "str"}]);
    var y1 = foo1([{a: 100}]);
    
    var x2 = foo2([{a: "str"}]);
    var y2 = foo2([{a: 100}]);